feature(rtsp):检查程序中调用live555

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,35 @@ project(RTSP_SERVER)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+# 设置 live555 库的路径
+set(LIVE555_DIR ${CMAKE_CURRENT_SOURCE_DIR}/live)
+
+# 添加 live555 库的头文件路径
+include_directories(
+    ${LIVE555_DIR}/liveMedia/include
+    ${LIVE555_DIR}/groupsock/include
+    ${LIVE555_DIR}/BasicUsageEnvironment/include
+    ${LIVE555_DIR}/UsageEnvironment/include
+)
+
+# 查找 live555 库文件
+find_library(LIVEMEDIA_LIBRARY liveMedia ${LIVE555_DIR}/liveMedia)
+find_library(GROUPSOCK_LIBRARY groupsock ${LIVE555_DIR}/groupsock)
+find_library(BASICUSAGEENVIRONMENT_LIBRARY BasicUsageEnvironment ${LIVE555_DIR}/BasicUsageEnvironment)
+find_library(USAGEENVIRONMENT_LIBRARY UsageEnvironment ${LIVE555_DIR}/UsageEnvironment)
+
+# 检查是否找到所有库
+if(NOT LIVEMEDIA_LIBRARY OR NOT GROUPSOCK_LIBRARY OR NOT BASICUSAGEENVIRONMENT_LIBRARY OR NOT USAGEENVIRONMENT_LIBRARY)
+    message(FATAL_ERROR "Could not find all live555 libraries. Need compile live555.")
+endif()
+
 # 添加可执行文件
 add_executable(rtsp_server rtsp/rtsp_server.cpp)
+
+# 链接 live555 库到可执行文件
+target_link_libraries(rtsp_server
+    ${LIVEMEDIA_LIBRARY}
+    ${GROUPSOCK_LIBRARY}
+    ${BASICUSAGEENVIRONMENT_LIBRARY}
+    ${USAGEENVIRONMENT_LIBRARY}
+)    
